<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/page_phonetic_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:src="@drawable/background_2" />

    <ImageView
        android:id="@+id/page_phonetic_help"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:adjustViewBounds="true"
        android:src="@drawable/help"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="905dp"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_help_close"
        android:id="@+id/page_phonetic_help_close"
        android:gravity="center_horizontal"
        android:textSize="24dp"
        android:layout_above="@+id/page_phonetic_help_button"
        android:layout_alignLeft="@+id/page_phonetic_help"
        android:layout_alignStart="@+id/page_phonetic_help"
        android:layout_alignRight="@+id/page_phonetic_help"
        android:layout_alignEnd="@+id/page_phonetic_help"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/page_phonetic_help_button"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:adjustViewBounds="true"
        android:src="@drawable/help_button"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/page_phonetic_help"
        android:layout_alignStart="@+id/page_phonetic_help"
        android:layout_marginBottom="20dp"
        android:layout_alignRight="@+id/page_phonetic_help"
        android:layout_alignEnd="@+id/page_phonetic_help"
        android:visibility="visible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_phonetic_oefening"
        android:id="@+id/page_phonetic_oefening"
        android:layout_marginTop="80dp"
        android:layout_alignTop="@+id/page_phonetic_help"
        android:layout_alignLeft="@+id/page_phonetic_help"
        android:layout_alignStart="@+id/page_phonetic_help"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:layout_alignRight="@+id/page_phonetic_help"
        android:layout_alignEnd="@+id/page_phonetic_help" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_phonetic_title"
        android:id="@+id/page_phonetic_title"
        android:layout_below="@+id/page_phonetic_oefening"
        android:layout_alignLeft="@+id/page_phonetic_help"
        android:layout_alignStart="@+id/page_phonetic_help"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:layout_alignRight="@+id/page_phonetic_help"
        android:layout_alignEnd="@+id/page_phonetic_help" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_phonetic_leeftijd"
        android:id="@+id/page_phonetic_leeftijd"
        android:layout_below="@+id/page_phonetic_title"
        android:layout_alignLeft="@+id/page_phonetic_help"
        android:layout_alignStart="@+id/page_phonetic_help"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:layout_alignRight="@+id/page_phonetic_help"
        android:layout_alignEnd="@+id/page_phonetic_help" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_phonetic_leeftijd_info"
        android:id="@+id/page_phonetic_leeftijd_info"
        android:layout_below="@+id/page_phonetic_leeftijd"
        android:layout_alignLeft="@+id/page_phonetic_help"
        android:layout_alignStart="@+id/page_phonetic_help"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:layout_alignRight="@+id/page_phonetic_help"
        android:layout_alignEnd="@+id/page_phonetic_help" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_phonetic_description"
        android:id="@+id/page_phonetic_description"
        android:layout_below="@+id/page_phonetic_leeftijd_info"
        android:layout_alignLeft="@+id/page_phonetic_help"
        android:layout_alignStart="@+id/page_phonetic_help"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        android:layout_alignRight="@+id/page_phonetic_help"
        android:layout_alignEnd="@+id/page_phonetic_help" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/page_phonetic_bee"
        android:src="@drawable/bee"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="150dp"
        android:layout_marginTop="100dp" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/page_phonetic_snake"
        android:src="@drawable/snake"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="300dp"
        android:layout_marginBottom="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/page_phonetic_information"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="75dp"
        android:textSize="48dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:visibility="invisible" />
</RelativeLayout>