<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/page_home_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:src="@drawable/background_3" />

    <ImageView
        android:id="@+id/page_home_talkee"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/talkee"
        android:layout_marginRight="94dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="147dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/page_home_speech_bubble"
        android:visibility="invisible"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/speech_bubble"
        android:layout_marginRight="199dp"
        android:layout_marginEnd="199dp"
        android:layout_above="@+id/page_home_talkee"
        android:layout_alignRight="@+id/page_home_talkee"
        android:layout_alignEnd="@+id/page_home_talkee" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_home_explanation_2"
        android:id="@+id/page_home_explanation_2"
        android:password="false"
        android:gravity="center_horizontal"
        android:textColorLink="@color/grey"
        android:layout_below="@+id/page_home_explanation_1"
        android:layout_alignLeft="@+id/page_home_speech_bubble"
        android:layout_alignStart="@+id/page_home_speech_bubble"
        android:layout_marginStart="55dp"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/page_home_talkee"
        android:layout_toStartOf="@+id/page_home_talkee"
        android:paddingLeft="25dp"
        android:paddingTop="3dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_home_explanation_3"
        android:id="@+id/page_home_explanation_3"
        android:gravity="center_horizontal"
        android:textColorLink="@color/grey"
        android:layout_below="@+id/page_home_explanation_2"
        android:layout_alignLeft="@+id/page_home_explanation_2"
        android:layout_alignStart="@+id/page_home_explanation_2"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/page_home_explanation_2"
        android:layout_alignEnd="@+id/page_home_explanation_2"
        android:paddingLeft="25dp"
        android:paddingTop="3dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_home_explanation_4"
        android:id="@+id/page_home_explanation_4"
        android:gravity="center_horizontal"
        android:textColorLink="@color/grey"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/page_home_explanation_3"
        android:layout_alignLeft="@+id/page_home_explanation_3"
        android:layout_alignStart="@+id/page_home_explanation_3"
        android:layout_alignRight="@+id/page_home_explanation_3"
        android:layout_alignEnd="@+id/page_home_explanation_3"
        android:paddingLeft="30dp"
        android:paddingTop="3dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_home_explanation_1"
        android:id="@+id/page_home_explanation_1"
        android:layout_marginTop="30dp"
        android:layout_alignTop="@+id/page_home_speech_bubble"
        android:layout_alignLeft="@+id/page_home_explanation_2"
        android:layout_alignStart="@+id/page_home_explanation_2"
        android:layout_alignRight="@+id/page_home_explanation_2"
        android:layout_alignEnd="@+id/page_home_explanation_2"
        android:gravity="center_horizontal"
        android:paddingLeft="30dp"
        android:paddingTop="3dp"
        android:visibility="invisible" />

</RelativeLayout>