<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/page_phonological_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:src="@drawable/background_1" />

    <ImageView
        android:id="@+id/page_phonological_help"
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:adjustViewBounds="true"
        android:src="@drawable/help"
        android:layout_marginLeft="905dp"
        android:layout_marginStart="905dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_help_close"
        android:id="@+id/page_phonological_help_close"
        android:gravity="center_horizontal"
        android:textSize="24dp"
        android:layout_above="@+id/page_phonological_help_button"
        android:layout_alignLeft="@+id/page_phonological_help"
        android:layout_alignStart="@+id/page_phonological_help"
        android:layout_alignRight="@+id/page_phonological_help"
        android:layout_alignEnd="@+id/page_phonological_help"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/page_phonological_help_button"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:adjustViewBounds="true"
        android:src="@drawable/help_button"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/page_phonological_help"
        android:layout_alignStart="@+id/page_phonological_help"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_phonological_oefening"
        android:id="@+id/page_phonological_oefening"
        android:layout_marginTop="80dp"
        android:layout_alignTop="@+id/page_phonological_help"
        android:layout_alignLeft="@+id/page_phonological_help"
        android:layout_alignStart="@+id/page_phonological_help"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_phonological_title"
        android:id="@+id/page_phonological_title"
        android:layout_below="@+id/page_phonological_oefening"
        android:layout_alignLeft="@+id/page_phonological_help"
        android:layout_alignStart="@+id/page_phonological_help"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_phonological_leeftijd"
        android:id="@+id/page_phonological_leeftijd"
        android:layout_below="@+id/page_phonological_title"
        android:layout_alignLeft="@+id/page_phonological_help"
        android:layout_alignStart="@+id/page_phonological_help"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_phonological_leeftijd_info"
        android:id="@+id/page_phonological_leeftijd_info"
        android:layout_below="@+id/page_phonological_leeftijd"
        android:layout_alignLeft="@+id/page_phonological_help"
        android:layout_alignStart="@+id/page_phonological_help"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_phonological_description"
        android:id="@+id/page_phonological_description"
        android:layout_below="@+id/page_phonological_leeftijd_info"
        android:layout_alignLeft="@+id/page_phonological_help"
        android:layout_alignStart="@+id/page_phonological_help"
        android:layout_marginTop="35dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:visibility="invisible"/>

    <ImageView
        android:layout_width="475dp"
        android:layout_height="105dp"
        android:id="@+id/page_phonological_hek"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="400dp"
        android:layout_marginBottom="290dp" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:id="@+id/page_phonological_gras_1"
        android:clickable="true"
        android:layout_alignBottom="@+id/page_phonological_help"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="200dp"
        android:layout_marginBottom="50dp" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:id="@+id/page_phonological_gras_2"
        android:clickable="true"
        android:layout_alignBottom="@+id/page_phonological_help"
        android:layout_alignRight="@+id/page_phonological_help"
        android:layout_alignEnd="@+id/page_phonological_help"
        android:layout_marginBottom="130dp"
        android:layout_marginRight="300dp" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:id="@+id/page_phonological_gras_3"
        android:clickable="true"
        android:layout_alignBottom="@+id/page_phonological_help"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="520dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/page_phonological_word"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal"
        android:textSize="48dp"
        android:textColor="@color/orange"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="225dp"
        android:id="@+id/page_phonological_boom"
        android:layout_alignBottom="@+id/page_phonological_help"
        android:layout_alignRight="@+id/page_phonological_help"
        android:layout_alignEnd="@+id/page_phonological_help"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="225dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:id="@+id/page_phonological_appels"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="440dp"
        android:layout_marginRight="85dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/page_phonological_information"
        android:id="@+id/page_phonological_information"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white" />

</RelativeLayout>